update to make heroku work

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.4.2",
   "meanjs-version": "0.4.2",
   "private": false,
-  "author": "Cole Burton | Jay Wang | University of Florida Jay Wang",
+  "author": "Cole Burton | Jay Wang | University of Florida",
   "license": "MIT",
   "repository": {
     "type": "git",
