--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/meanjs/mean.git"
   },
   "engines": {
-    "node": ">=0.10.28",
-    "npm": ">=1.4.28"
+    "node": "~6.5.0",
+    "npm": "3.10.7"
   },
   "scripts": {
     "start": "grunt",
@@ -81,7 +81,7 @@
     "grunt-mocha-istanbul": "^2.4.0",
     "grunt-mocha-test": "~0.12.7",
     "grunt-ng-annotate": "^1.0.1",
-    "grunt-node-inspector": "~0.3.0",
+    "grunt-node-inspector": "^0.4.1",
     "grunt-nodemon": "~0.4.0",
     "grunt-protractor-coverage": "~0.2.15",
     "grunt-protractor-runner": "^2.1.0",
