--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "passport-local": "^1.0.0",
     "passport-paypal-openidconnect": "^0.1.1",
     "passport-twitter": "^1.0.2",
+    "pdf2json": "^1.1.7",
     "phantomjs": ">=1.9.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
