--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-messages": "~1.3.17",
     "owasp-password-strength-test": "~1.3.0",
     "angular-dropdowns": "ngDropdowns#^1.5.1",
-    "angular-deep-blur": "^1.0.10"
+    "angular-deep-blur": "^1.0.10",
+    "angular-growl-v2": "^0.7.9"
   },
   "resolutions": {
     "angular": "~1.3"
